카테고리 수정 후 업로드

--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -132,55 +132,53 @@
                         <h4 class="mb-30">사진/영상 업로드</h4>
 
                         <!-- Form -->
-                        <form action="{% url 'posts:create' %}" method="POST"  enctype="multipart/form-data">
+                        <form action="{% url 'posts:update' post.id %}" method="POST"  enctype="multipart/form-data">
                             {% csrf_token %}
                             <div class="container">
                                 <div class="form-group">
                                     <label>카테고리</label>
                                     <select name="category" id="category">
-                                        {% if "pub" in post.category %}
+                                        {% if post.category == 'pub' %}
                                             <option value="pub" selected>주점</option>
                                             <option value="booth" >부스</option>
                                             <option value="performance" >공연</option>
                                             <option value="etc" >기타</option>
                                         
-                                        {% elif "booth" in post.category %}   
+                                        {% elif post.category == 'booth' %}   
                                             <option value="pub" >주점</option>
                                             <option value="booth" selected>부스</option>
                                             <option value="performance" >공연</option>
                                             <option value="etc" >기타</option>
 
-                                        {% elif "performance" in post.category %}   
-                                        <option value="pub" >주점</option>
-                                        <option value="booth" >부스</option>
-                                        <option value="performance" selected>공연</option>
-                                        <option value="etc" >기타</option>
+                                        {% elif post.category == 'performance' %}   
+                                            <option value="pub" >주점</option>
+                                            <option value="booth" >부스</option>
+                                            <option value="performance"selected >공연</option>
+                                            <option value="etc" >기타</option>
 
-                                        {% elif "etc" in post.category %}   
+                                        {% elif post.category == 'etc' %}   
                                             <option value="pub" >주점</option>
                                             <option value="booth" >부스</option>
                                             <option value="performance" >공연</option>
                                             <option value="etc" selected>기타</option>
-
                                         {% endif %}
                                     </select>
                                 </div>
-                        
                             </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력">{{ post.title }}</textarea>
-                                </div>
-                                <div class="col-12">  
-                                    <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" required>
-                                </div>
-                        
 
-                                <div class="col-12">
-                                    <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
-                                </div>
+                            <div class="col-12">
+                                <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required>
+                            </div>
+                            <div class="col-12">
+                                <textarea class="form-control mb-30" name="content" placeholder="내용 입력">{{ post.content }}</textarea>
+                            </div>
+                            <div class="col-12">  
+                                <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" required>
+                            </div>
+                    
+
+                            <div class="col-12">
+                                <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                             </div>
                         </form>
                     </div>
