--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -20,9 +20,8 @@
                     <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
                 {% endif %}
             </div>
-            <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
-                <a href="{% url 'posts:update' post.pk %}" class="btn alime-btn btn-2 mt-15">Edit</a>
-            </div>
+            <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
+            <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
         </div>
     {% endif %}
 {% endfor %}
