--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -1,64 +1,101 @@
-{% extends 'dgufest/base.html' %}
 {% load static %}
-{% block content %}
 
-<!-- Breadcrumb Area Start -->
-<section class="breadcrumb-area bg-img bg-overlay jarallax">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-12">
-                <div class="breadcrumb-content text-center">
-                    <h2 class="page-title">Gallery</h2>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a href="#"><i class="icon_house_alt"></i> Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Gallery</li>
-                        </ol>
+<!DOCTYPE html>
+<html lang="kr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Title -->
+    <title>동국대 전자 액자 경진 대회</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'img/core-img/favicon.png' %}">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://kit.fontawesome.com/cc0d007bbf.js" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- /Preloader -->
+
+    <!-- Top Search Form Area -->
+    <div class="top-search-area">
+        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <!-- Close -->
+                        <button type="button" class="btn close-btn" data-dismiss="modal"><i class="ti-close"></i></button>
+                        <!-- Form -->
+                        <form action="index.html" method="post">
+                            <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
+                            <button type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Header Area Start -->
+    <header class="header-area">
+        <!-- Main Header Start -->
+        <div class="main-header-area">
+            <div class="classy-nav-container breakpoint-off">
+                <div class="container">
+                    <!-- Classy Menu -->
+                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+
+                        <!-- Logo -->
+                        <a class="nav-brand" href="#"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
+
+                        <!-- Navbar Toggler -->
+                        <div class="classy-navbar-toggler">
+                            <span class="navbarToggler"><span></span><span></span><span></span></span>
+                        </div>
+
+                        <!-- Menu -->
+                        <div class="classy-menu">
+                            <!-- Menu Close Button -->
+                            <div class="classycloseIcon">
+                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                            </div>
+                            {% include 'shared/navbar.html' %}
+                        </div>
                     </nav>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- Breadcrumb Area End -->
+    </header>
+    <!-- Header Area End -->
 
-<!-- Gallery Area Start -->
-<div class="alime-portfolio-area section-padding-80 clearfix">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <!-- Projects Menu -->
-                <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
-                    <div class="portfolio-menu text-center">
-                        <button class="btn active" data-filter="*">All</button>
-                        <button class="btn" data-filter=".pub">주점</button>
-                        <button class="btn" data-filter=".booth">부스</button>
-                        <button class="btn" data-filter=".performance">공연</button>
-                        <button class="btn" data-filter=".etc">기타</button>
-                    </div>
+    {% block content %}
 
-                    <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
-                        <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
+    {% endblock %}
 
-        <div class="row alime-portfolio">
-            <!-- Single Gallery Item -->
-            {% include 'shared/gallery_item.html' with category_value="pub" %}
-            {% include 'shared/gallery_item.html' with category_value="booth" %}
-            {% include 'shared/gallery_item.html' with category_value="performance" %}
-            {% include 'shared/gallery_item.html' with category_value="etc" %}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 text-center wow fadeInUp" data-wow-delay="800ms">
-            <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
-        </div>
-    </div>
-</div>
-<!-- Gallery Area End -->
+    {% include 'shared/footer.html' %}
 
-{% endblock %}
+    <!-- **** All JS Files ***** -->
+    <!-- jQuery 2.2.4 -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- Popper -->
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <!-- Bootstrap -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- All Plugins -->
+    <script src="{% static 'js/alime.bundle.js' %}"></script>
+    <!-- Active -->
+    <script src="{% static 'js/default-assets/active.js' %}"></script>
+</body>
+
+</html>
