--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -6,7 +6,7 @@
 <div class="alime--blog-area section-padding-80">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-10">
+            <div class="col-12 col-lg-10"></div>
         </div>
     </div>
 </div>
