update - image파일 유지

--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -65,7 +65,7 @@
                             <textarea class="form-control mb-30" name="content" placeholder="내용 입력">{{ post.content }}</textarea>
                         </div>
                         <div class="col-12">  
-                            <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" required>
+                            <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" >
                         </div>
                 
 
