--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -27,6 +27,43 @@
     </ul>
 
     <!-- Search Icon -->
-    <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i class="ti-search"></i></div>
+    <div class="search-icon" data-toggle="modal" data-target="#searchModal" style="margin-left:20px"><i class="ti-search"></i></div>
+
+
+    <!--django-allauth-->
+    <style>
+        #A{
+            margin-left:30px;
+            border-top-left-radius:5px;
+            border-bottom-left-radius:5px;
+            border-top-right-radius:5px;
+            border-bottom-right-radius:5px;
+        }
+        #B{
+            margin-left:0px;
+            border-top-left-radius:5px;
+            border-bottom-left-radius:5px;
+            border-top-right-radius:5px;
+            border-bottom-right-radius:5px;
+        }
+        #btn_group button{
+            border: 1px solid white;
+            background-color: transparent;
+            padding: 4px
+        }
+        #btn_group button:hover{
+            background-color:#fc6060;
+        }
+    </style>
+    {% if user.is_authenticated %}
+    <div id="btn_group">
+        <button id="A"><a href="{% url 'account_logout' %}" style="color:white">Logout</a></button>
+    </div>
+    {% else %}
+    <div id="btn_group">
+        <button id="A"><a href="{% url 'account_login' %}" style="color:white">Login</a></button>
+        <button id="B"><a href="{% url 'account_signup'%}" style="color:white">Signup</a></button>
+    </div>
+    {% endif %}
 </div>
 <!-- Nav End -->
