--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu='return false'>
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
