--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -136,7 +136,7 @@
                     <!-- Projects Menu -->
                     <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
+                            <button class="btn" data-filter="*" id="all">All</button>
                             <button class="btn" data-filter=".pub">주점</button>
                             <button class="btn" data-filter=".booth">부스</button>
                             <button class="btn" data-filter=".performance">공연</button>
@@ -287,6 +287,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="{% static 'js/alime.bundle.js' %}"></script>
     <!-- Active -->
     <script src="{% static 'js/default-assets/active.js' %}"></script>
+
+    <script src="{% static 'js/triggerclick.js' %}"></script>
+
 
 </body>
 
