--- a/dgufest/static/css/style.css
+++ b/dgufest/static/css/style.css
@@ -1667,7 +1667,49 @@ input:required {
     height: 100%;
     border: none !important;
     border-radius: 10px; }
-
 /*# sourceMappingURL=style.css.map */
+
+/*allauth-css*/
+ #submit{
+    border-top-left-radius:5px;
+    border-bottom-left-radius:5px;
+    border-top-right-radius:5px;
+    border-bottom-right-radius:5px;
+    padding:5px;
+  }
+  #submit button{
+      border: 1px solid gray;
+      background-color: transparent;
+  }
+  #submit button:hover{
+      background-color:#fc6060;
+  }
+  
+  #btn_group{
+      border-top-left-radius:5px;
+      border-bottom-left-radius:5px;
+      border-top-right-radius:5px;
+      border-bottom-right-radius:5px;
+  }
+  #A{
+      margin-left:30px;
+  }
+  #B{
+      margin-left:0px;
+  }
+  #btn_group button{
+      border: 1px solid white;
+      background-color: transparent;
+      padding: 4px
+  }
+  #btn_group button:hover{
+      background-color:#fc6060;
+  }
+
+  #allauth {
+    text-align: center;
+    padding-top: 50px; 
+    padding-bottom: 100px
+  }
 
 
