--- a/dgufest/templates/account/logout.html
+++ b/dgufest/templates/account/logout.html
@@ -25,34 +25,17 @@
 </section>
 <!-- Breadcrumb Area End -->
 
-<style>
-    #submit{
-        border-top-left-radius:5px;
-        border-bottom-left-radius:5px;
-        border-top-right-radius:5px;
-        border-bottom-right-radius:5px;
-        padding:5px;
-    }
-    #submit button{
-        border: 1px solid gray;
-        background-color: transparent;
-    }
-    #submit button:hover{
-        background-color:#fc6060;
-    }
-</style>
-
-<center style="padding-top:50px; padding-bottom:100px">
+<div id="allauth">
     <p style="color:#fc6060; font-weight: bolder;">{% trans '정말 로그아웃 하시겠습니까?' %}</p>
 
     <form method="post" action="{% url 'account_logout' %}">
-    {% csrf_token %}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-    {% endif %}
-    <div id="submit">
-        <button type="submit" id="submit">{% trans 'Sign Out' %}</button>
-    </div>
+        {% csrf_token %}
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+        {% endif %}
+            <div id="submit">
+                <button type="submit" id="submit">{% trans 'Sign Out' %}</button>
+            </div>
     </form>
-</center>
+</div>
 {% endblock %}
