--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -25,37 +25,20 @@
 </section>
 <!-- Breadcrumb Area End -->
 
-<style>
-    #submit{
-        border-top-left-radius:5px;
-        border-bottom-left-radius:5px;
-        border-top-right-radius:5px;
-        border-bottom-right-radius:5px;
-        padding:5px;
-    }
-    #submit button{
-        border: 1px solid gray;
-        background-color: transparent;
-    }
-    #submit button:hover{
-        background-color:#fc6060;
-    }
-</style>
-
-<center style="padding-top:50px; padding-bottom:100px">
+<div id="allauth">
     <p>{% blocktrans %}이미 계정이 있으신가요? 바로
     <a href="{{ login_url }}" style="color:#fc6060; font-weight: bolder;">로그인</a>하세요.{% endblocktrans %}</p>
 
     <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <div id="submit">
-        <button type="submit" id="submit">{% trans "Sign Up" %}</button>
-    </div>
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+            <div id="submit">
+                <button type="submit" id="submit">{% trans "Sign Up" %}</button>
+            </div>
     </form>
-</center>
+</div>
 
 {% endblock %}
