--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -1,6 +1,6 @@
 {% for post in posts %}
     {% if post.category == category_value %}
-        <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms">
+        <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
             <div class="single-portfolio-content">
                 {% if "video" in post.mediatype %}
                     <video class="col-12" controls>
