이용약관, 개인정보처리방침 footer링크 연결

--- a/dgufest/templates/shared/footer.html
+++ b/dgufest/templates/shared/footer.html
@@ -32,8 +32,8 @@
     Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         </div>
-                        <a href="#" class=" pull-right">이용약관 </a>
-                        <a href="#" class=" pull-right"> 개인정보처리방침</a>
+                        <a href="{% url 'service_terms' %}" class=" pull-right">이용약관 </a>
+                        <a href="{% url 'personal_data' %}" class=" pull-right"> 개인정보처리방침</a>
                     </div>
                 </div>
             </div>
