about 이미지추가&index문구 수정

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/38.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(/static/img/about-img/aboutimg.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
