--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -12,11 +12,10 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInDown" data-delay="900ms">Hello <br>I'm Jackson</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
-                                <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:hello.alime@gmail.com">hello.alime@gmail.com</a>
+                                <h2 data-animation="bounceInDown" data-delay="100ms">2020 <br>동국대학교<br>온라인 대동전</h2>
+                                <p data-animation="bounceInDown" data-delay="500ms">멋쟁이사자처럼&HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</p>
+                                <div class="hero-btn-group" data-animation="bounceInDown" data-delay="900ms">
+                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">갤러리 보기</a>
                                 </div>
                             </div>
                         </div>
@@ -30,11 +29,10 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Alime</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">제출기간<br>2020.10.09~<br>2020.11.01</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">사진을 제출해주세요.(문구 수정 예정)</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:hello.alime@gmail.com">hello.alime@gmail.com</a>
+                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">사진전 참가하기</a>
                                 </div>
                             </div>
                         </div>
@@ -48,29 +46,10 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Alime</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">액자 경진대회<br>수상자 발표<br>2020.11.02</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">투표를 합산해 가장 많은 좋아요 순으로 순위 결정됩니다.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:hello.alime@gmail.com">hello.alime@gmail.com</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/img/main-slide-img/main4.jpg);">
-                <div class="container h-100">
-                    <div class="row h-100 align-items-center">
-                        <!-- Welcome Text -->
-                        <div class="col-12 col-lg-8 col-xl-6">
-                            <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Alime</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
-                                <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:hello.alime@gmail.com">hello.alime@gmail.com</a>
+                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">갤러리 보기</a>
                                 </div>
                             </div>
                         </div>
