--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -13,7 +13,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="100ms">2020 <br>동국대학교<br>온라인 대동전</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">멋쟁이사자처럼&HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</p>
+                                <p data-animation="bounceInDown" data-delay="500ms">멋쟁이사자처럼과 HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="900ms">
                                 </div>
                             </div>
@@ -44,8 +44,8 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">액자 경진대회<br>수상자 발표<br>2020.11.02</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">투표를 합산해 가장 많은 좋아요 순으로 순위 결정됩니다.</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">전자 액자 경진대회<br>수상자 발표<br>2020.11.02</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">좋아요 순으로 순위가 결정됩니다.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                 </div>
                             </div>
