--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -10,10 +10,10 @@
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
-                        <div class="col-12 col-lg-8 col-xl-6">
+                        <div class="col-20 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInDown" data-delay="100ms">2020 <br>동국대학교<br>온라인 대동전</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">멋쟁이사자처럼과 HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</p>
+                                <h2 data-animation="bounceInDown" data-delay="100ms">멋쟁이사자처럼과<br> HI-SW 봉사단이 함께하는<br>웹 기반 전자 액자 경진 대회</h2>
+                                <p data-animation="bounceInDown" data-delay="500ms">후원: 동국대학교 융합교육원, 동국대학교 제50대 총학생회 하이라이트</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="900ms">
                                 </div>
                             </div>
@@ -28,8 +28,8 @@
                         <!-- Welcome Text -->
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">제출기간<br>2020.10.09~<br>2020.11.01</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">사진을 제출해주세요.(문구 수정 예정)</p>
+                                <h2 data-animation="bounceInUp" data-delay="100ms">제출기간<br>2020.10.09~2020.11.01</h2>
+                                <p data-animation="bounceInUp" data-delay="500ms">기간 내에 사진을 제출해주세요</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                 </div>
                             </div>
