--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -3,12 +3,20 @@
         <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
                 {% if "video" in post.mediatype %}
-                    <video class="col-12" controls>
-                        <source src="{{post.mediafile.url}}" alt="video">
-                    </video>
-                    <div class="hover-content">
-                        <a href="{{post.mediafile.url}}" class=".video-play-btn">+</a>
+                    <!-- <a href="#video" class="video-play-btn">
+                    <div id="video">
+                        <video class="col-12" controls>
+                            <source src="{{post.mediafile.url}}" type="video/mp4">
+                        </video>
+                    </div> -->
+                    <div id="video">
+                        <video class="col-12" controls>
+                            <source src="{{post.mediafile.url}}" alt="video">
+                        </video>
                     </div>
+                    <div class="hover-content">
+                        <a href="#video" class="openVideo">+</a>
+                    </div>  
                 {% else %}
                     <img src ="{{post.mediafile.url}}" alt="">
                     <div class="hover-content">
@@ -20,8 +28,8 @@
                     <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
                 {% endif %}
             </div>
-            <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
-            <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
+            <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
+            <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a>
         </div>
     {% endif %}
 {% endfor %}
