한글 폰트 수정

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'css/style3.css' %}">
+
+
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(/static/img/about-img/aboutimg.jpg);">
         <div class="container h-100">
@@ -74,7 +78,7 @@
                         <table class="type04">
                             <tr>
                                 <th scope="row">투표 기간</th>
-                                <td>11월 1일 자정까지</td>
+                                <td>11월 1일<br>자정까지</td>
                             </tr>
                             <tr>
                                 <th scope="row">수상작 발표</th>
