유저 앱 생성, 마이페이지 제작, 비밀번호 변경기능 추가, posts 앱 user 모델 추가

--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -7,7 +7,7 @@
                 <li><a href="./">- Home</a></li>
                 <li><a href="{% url 'about' %}">- About</a></li>
                 <li><a href="{% url 'posts:gallery' %}">- Gallery</a></li>
-                <li><a href="./blog.html">- Blog</a></li>
+                <li><a href="{% url 'users:mypage' %}">- My page</a></li>
                 <li><a href="./single-blog.html">- Blog Details</a></li>
                 <li><a href="./contact.html">- Contact</a></li>
                 <li><a href="#">- Dropdown</a>
@@ -22,7 +22,7 @@
         </li>
         <li><a href="{% url 'about' %}">About</a></li>
         <li><a href="{% url 'posts:gallery' %}">Gallery</a></li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="{% url 'users:mypage' %}">My page</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
 
