--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -9,7 +9,7 @@
                             <source src="{{post.mediafile.url}}" type="video/mp4">
                         </video>
                     </div> -->
-                    <div id="video-{{post.id}}">
+                    <div id="video-{{post.id}}" style="display: block !important;">
                         <video class="col-12" controls >
                             <source src="{{post.mediafile.url}}" alt="video">
                         </video>
@@ -28,8 +28,8 @@
                     <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
                 {% endif %}
             </div>
-            <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
-            <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a>
+            <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
+            <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
         </div>
     {% endif %}
 {% endfor %}
