--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -30,33 +30,45 @@
                 <div class="col-12 col-lg-6">
                     <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>내 프로필</h2>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
-                <!-- Contact Info -->
-                    <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
-                        <p>ID</p>
-                        <a>{{user}}</a>
+
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <!-- Contact Info -->
+                            <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                                <p>ID</p>
+                                <a>{{user}}</a>
+                            </div>
+                        <!-- Contact Info -->
                     </div>
-                <!-- Contact Info -->
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <!-- Contact Info -->
+                        <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                                <p>Email</p>
+                                <a>{{user.email}}</a>
+                        </div>
+                    </div>
                 </div>
+                
 
                 <!-- Contact Info -->
-                <div class="col-12 col-md-6 col-lg-3">
-                    <!-- Contact Info -->
-                    <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
-                            <p>Email</p>
-                            <a>{{user.email}}</a>
-                    </div>
-                </div>
+                
                 <!-- Contact Info -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
                         <a href="{% url 'users:ps_change' %}" class="btn alime-btn btn-2 mt-15">비밀번호 변경</a>
-                </div>
+                    </div>
                 </div>
 
             {% else %}
                 <div class="col-12 col-lg-6">
                     <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 <br>이용 가능합니다</h3>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
+                        <a href="*" class="btn alime-btn btn-2 mt-15">로그인</a>
+                    </div>
                 </div>
             {% endif %}
         </div>
