--- a/users/templates/users/ps_change.html
+++ b/users/templates/users/ps_change.html
@@ -55,7 +55,7 @@
                      <!-- Contact Info -->
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
-                            <input type="submit" class="btn alime-btn btn-2 mt-15" value="submit">비밀번호 변경</a>
+                            <a><input type="submit" class="btn alime-btn btn-2 mt-15" value="submit">비밀번호 변경</a>
                         </div>
                     </div>
                 </form>
