--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -38,7 +38,6 @@
                         <button class="btn" data-filter=".performance">공연</button>
                         <button class="btn" data-filter=".etc">기타</button>
                     </div>
-
                     <select id="sort-select" onchange="location = this.value;">
                         {% if "/?sort=random" in request.get_full_path %}
                         <option class="sort-new" value="?new" >최신순</option>
@@ -55,13 +54,64 @@
                 </div>
             </div>
         </div>
-
+        <!-- <ul id="something">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul> -->
+        <button id="shuffle" type="button">Shuffle List Items</button>
         <div class="row alime-portfolio">
             <!-- Single Gallery Item -->
-            {% include 'shared/gallery_item.html' with category_value="pub" %}
-            {% include 'shared/gallery_item.html' with category_value="booth" %}
-            {% include 'shared/gallery_item.html' with category_value="performance" %}
-            {% include 'shared/gallery_item.html' with category_value="etc" %}
+
+         
+            {% for post in posts %}
+                {% if post.category == "pub" %}
+                    {% include 'shared/gallery_item.html' with category_value="pub" %}
+                {% elif post.category == "booth" %}
+                    {% include 'shared/gallery_item.html' with category_value="booth" %}
+                {% elif post.category == "performance" %}
+                    {% include 'shared/gallery_item.html' with category_value="performance" %}
+                {% elif post.category == "etc" %}
+                    {% include 'shared/gallery_item.html' with category_value="etc" %}
+                {% else %}
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
+                        <div class="single-portfolio-content">
+                            {% if "video" in post.mediatype %}
+                                <!-- <a href="#video" class="video-play-btn">
+                                <div id="video">
+                                    <video class="col-12" controls>
+                                        <source src="{{post.mediafile.url}}" type="video/mp4">
+                                    </video>
+                                </div> -->
+                                <div id="video-{{post.id}}" style="display: block !important;">
+                                    <video class="col-12" controls >
+                                        <source src="{{post.mediafile.url}}" alt="video">
+                                    </video>
+                                </div>
+                                <div class="hover-content">
+                                    <a href="#video-{{post.id}}" class="video-play-btn">+</a>
+                                </div>  
+                            {% else %}
+                                <img src ="{{post.mediafile.url}}" alt="">
+                                <div class="hover-content">
+                                    <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                                </div>
+                            {% endif %}
+            
+                            {% if post.title %}
+                                <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                            {% endif %}
+                        </div>
+                        <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
+                        <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
+                    </div>
+                {% endif %}
+            {% endfor %}
+        
+
+          
         </div>
     </div>
     <div class="row">
@@ -72,5 +122,34 @@
 </div>
 <!-- Gallery Area End -->
 
+<script>
 
+var list = document.getElementById("something"),
+button = document.getElementById("shuffle");
+function shuffle(items)
+{
+    var cached = items.slice(0), temp, i = cached.length, rand;
+    while(--i)
+    {
+        rand = Math.floor(i * Math.random());
+        temp = cached[rand];
+        cached[rand] = cached[i];
+        cached[i] = temp;
+    }
+    return cached;
+}
+function shuffleNodes()
+{
+    var nodes = list.children, i = 0;
+    nodes = Array.prototype.slice.call(nodes);
+    nodes = shuffle(nodes);
+    while(i < nodes.length)
+    {
+        list.appendChild(nodes[i]);
+        ++i;
+    }
+}
+button.onclick = shuffleNodes;
+
+</script>
 {% endblock %}
