--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!-- Nav Start -->
 <div class="classynav">
     <ul id="nav">
@@ -23,7 +21,7 @@
             </ul>
         </li>
         <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'posts:gallery' %}" id="gallery">Gallery</a></li>
+        <li><a href="{% url 'posts:gallery' %}">Gallery</a></li>
         <li><a href="./blog.html">Blog</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
@@ -45,5 +43,3 @@
     {% endif %}
 </div>
 <!-- Nav End -->
-
-<script src="{% static 'js/triggerclick.js' %}"></script>    
