about 이미지 추가

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="{%static 'img/core-img/dgulion.png' %}" alt="임시이미지">
+                        <img src="{%static 'img/about-img/about-sm-img.jpg' %}" alt="임시이미지">
                     </div>
                 </div>
             </div>
