password 초기화 페이지 수정, 이메일 설정

--- a/dgufest/templates/account/password_reset_done.html
+++ b/dgufest/templates/account/password_reset_done.html
@@ -1,3 +1,4 @@
+  
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -24,22 +25,12 @@
         </div>
     </div>
 </section>
-<!-- Breadcrumb Area End -->
 <div id="allauth">
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    <p>{% trans "비밀번호를 잊어버리셨나요? <br>아래에 이메일을 입력하시면, 비밀번호 초기화 이메일을 전송해 드리겠습니다." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div id="submit">
-            <button type="submit" id="submit">{% trans 'Reset My Password' %}</button>
-        </div>
-    </form>
-
-    <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}↓비밀번호 초기화에 문제가 있으시면 저희에게 연락주세요.↓{% endblocktrans %}</p>
+    <p>{% blocktrans %}이메일이 전송되었습니다.{% endblocktrans %}</p>
+    <p style="color: #fc6060">{% blocktrans %}↓몇 분 후에도 이메일이 오지 않으면 저희에게 연락주세요.↓{% endblocktrans %}</p>
     <a href="https://pf.kakao.com/_jxbIxfd">
         <i class="fas fa-comment">  카카오톡 채널 <동국대-멋쟁이 사자처럼></i>
 </div>
