--- a/dgufest/templates/account/password_reset_from_key.html
+++ b/dgufest/templates/account/password_reset_from_key.html
@@ -1,9 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
 <!-- Breadcrumb Area Start -->
@@ -24,23 +22,22 @@
         </div>
     </div>
 </section>
-<!-- Breadcrumb Area End -->
 <div id="allauth">
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+    {% if token_fail %}
+        {% url 'account_reset_password' as passwd_reset_url %}
+        <p>{% blocktrans %}비밀번호 초기화 링크가 올바르지 않습니다. 다시 <a href="{{ passwd_reset_url }}" style="color: #fc6060; font-weight: bolder;">비밀번호 초기화</a> 하세요.{% endblocktrans %}</p>
+    {% else %}
+        {% if form %}
+            <form method="POST" action="{{ action_url }}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div id="submit">
+                    <button type="submit" id="submit">{% trans 'change password' %}</button>
+                </div>
+            </form>
+        {% else %}
+            <p>{% trans 'Your password is now changed.' %}</p>
+        {% endif %}
     {% endif %}
-    <p>{% trans "비밀번호를 잊어버리셨나요? <br>아래에 이메일을 입력하시면, 비밀번호 초기화 이메일을 전송해 드리겠습니다." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div id="submit">
-            <button type="submit" id="submit">{% trans 'Reset My Password' %}</button>
-        </div>
-    </form>
-
-    <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}↓비밀번호 초기화에 문제가 있으시면 저희에게 연락주세요.↓{% endblocktrans %}</p>
-    <a href="https://pf.kakao.com/_jxbIxfd">
-        <i class="fas fa-comment">  카카오톡 채널 <동국대-멋쟁이 사자처럼></i>
 </div>
 {% endblock %}
