--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -35,10 +35,14 @@
         {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
+        <p style="color: red; font-weight: bolder;">※ 이메일을 설정하지 않으시면 비밀번호를 잊어버렸을 때 비밀번호 초기화가 불가능합니다. ※</p>
             <div id="submit">
                 <button type="submit" id="submit">{% trans "Sign Up" %}</button>
             </div>
     </form>
+    <p style="padding-top: 30px; color: #fc6060">{% blocktrans %}↓회원가입에 문제가 있으시면 저희에게 연락주세요.↓{% endblocktrans %}</p>
+    <a href="https://pf.kakao.com/_jxbIxfd">
+        <i class="fas fa-comment">  카카오톡 채널 <동국대-멋쟁이 사자처럼></i>
 </div>
 
 {% endblock %}
