password_change 함수 이름 변경

--- a/users/templates/users/password_change.html
+++ b/users/templates/users/password_change.html
@@ -30,7 +30,7 @@
                     <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>비밀번호 변경</h2>
                 </div>
 
-                <form method="POST" action="{% url 'users:ps_change' %}" class="login_form">
+                <form method="POST" action="{% url 'users:password_change' %}" class="login_form">
                     {% csrf_token %}
                     <div class="error_message">{{error}}</div>
                     
