--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -56,7 +56,7 @@
                 <!-- Contact Info -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
-                        <a href="{% url 'users:ps_change' %}" class="btn alime-btn btn-2 mt-15">비밀번호 변경</a>
+                        <a href="{% url 'users:password_change' %}" class="btn alime-btn btn-2 mt-15">비밀번호 변경</a>
                     </div>
                 </div>
 
