migration 오류 수정

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -47,7 +47,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu='return false'>
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
