--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!-- Nav Start -->
 <div class="classynav">
     <ul id="nav">
@@ -9,7 +7,7 @@
                 <li><a href="./">- Home</a></li>
                 <li><a href="{% url 'about' %}">- About</a></li>
                 <li><a href="{% url 'posts:gallery' %}">- Gallery</a></li>
-                <li><a href="./blog.html">- Blog</a></li>
+                <li><a href="{% url 'users:mypage' %}">- My page</a></li>
                 <li><a href="./single-blog.html">- Blog Details</a></li>
                 <li><a href="./contact.html">- Contact</a></li>
                 <li><a href="#">- Dropdown</a>
@@ -24,13 +22,24 @@
         </li>
         <li><a href="{% url 'about' %}">About</a></li>
         <li><a href="{% url 'posts:gallery' %}" id="gallery">Gallery</a></li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="{% url 'users:mypage' %}">My page</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
 
     <!-- Search Icon -->
-    <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i class="ti-search"></i></div>
+    <div class="search-icon" data-toggle="modal" data-target="#searchModal" style="margin-left:20px"><i class="ti-search"></i></div>
+
+
+    <!--django-allauth-->
+    {% if user.is_authenticated %}
+    <div id="btn_group">
+        <button id="A"><a href="{% url 'account_logout' %}" style="color:white">Logout</a></button>
+    </div>
+    {% else %}
+    <div id="btn_group">
+        <button id="A"><a href="{% url 'account_login' %}" style="color:white">Login</a></button>
+        <button id="B"><a href="{% url 'account_signup'%}" style="color:white">Signup</a></button>
+    </div>
+    {% endif %}
 </div>
 <!-- Nav End -->
-
-<script src="{% static 'js/triggerclick.js' %}"></script>    
