--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -38,21 +38,36 @@
                         <button class="btn" data-filter=".performance">공연</button>
                         <button class="btn" data-filter=".etc">기타</button>
                     </div>
-
+                    <select id="sort-select" onchange="location = this.value;">
+                        {% if "/?sort=random" in request.get_full_path %}
+                            <option class="sort-new" value="?new" >최신순</option>
+                            <option class="sort-random" value="?sort=random" selected>랜덤순</option>
+                        {% else %}
+                            <option class="sort-new" value="?new" selected>최신순</option>
+                            <option class="sort-random" value="?sort=random" >랜덤순</option>
+                        {% endif %}
+                    </select>
                     <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
                         <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
                     </div>
-                    
                 </div>
             </div>
         </div>
-
         <div class="row alime-portfolio">
             <!-- Single Gallery Item -->
-            {% include 'shared/gallery_item.html' with category_value="pub" %}
-            {% include 'shared/gallery_item.html' with category_value="booth" %}
-            {% include 'shared/gallery_item.html' with category_value="performance" %}
-            {% include 'shared/gallery_item.html' with category_value="etc" %}
+            {% for post in posts %}
+                {% if post.category == "pub" %}
+                    {% include 'shared/gallery_item.html' with category_value="pub" %}
+                {% elif post.category == "booth" %}
+                    {% include 'shared/gallery_item.html' with category_value="booth" %}
+                {% elif post.category == "performance" %}
+                    {% include 'shared/gallery_item.html' with category_value="performance" %}
+                {% elif post.category == "etc" %}
+                    {% include 'shared/gallery_item.html' with category_value="etc" %}
+                {% else %}
+                    {% include 'shared/gallery_item.html' with category_value="" %}
+                {% endif %}   
+            {% endfor %}
         </div>
     </div>
     <div class="row">
@@ -62,6 +77,4 @@
     </div>
 </div>
 <!-- Gallery Area End -->
-
-
 {% endblock %}
