--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -18,6 +18,9 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://kit.fontawesome.com/cc0d007bbf.js" crossorigin="anonymous"></script>
+
+    <!-- Like -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     
     <script language="javascript">
         function getCookie( cookieName ) {
