--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -21,10 +21,19 @@
                 <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
             </div>
         {% endif %}
-        {% if post.title %}
-            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+        <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+        {% if user == post.user %}
+            <p> 좋아요 {{ post.like_count }}개 </p>
         {% endif %}
     </div>
+    <a href="{% url 'posts:post_like' post.id %}">
+        {% if user in post.like_user_set.all %}
+            <i class="fas fa-heart"></i>
+        {% else %}
+            <i class="far fa-heart"></i>
+        {% endif %}
+    </a>
     <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
     <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
 </div>
+
