--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -22,12 +22,15 @@
     </div>
     <a href="{% url 'posts:post_like' post.id %}">
         {% if user in post.like_user_set.all %}
-            <i class="fas fa-heart"></i>
+            <a href="#" class="like_toggle" data-post-id={{post.id}}>
+                <i class="fas fa-heart"></i>
+            </a>
         {% else %}
-            <i class="far fa-heart"></i>
+            <a href="#" class="like_toggle" data-post-id={{post.id}}>
+                <i class="far fa-heart"></i>
+            </a>
         {% endif %}
     </a>
     <!-- <a href="{% url 'posts:update' post.pk %}" class="btn btn-primary">수정하기</a>
     <a href="{% url 'posts:delete' post.pk %}" class="btn btn-primary">삭제하기</a> -->
 </div>
-
