--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -95,7 +95,9 @@
                 type: "POST",
                 success: function(response) {
                     likeButton.html(response.heart_icon);
+                    $(`#count-${postId}`).html(response.like_count);
                 },
+
                 error: function(response) {
                     alert('오류가 발생했습니다.');
                 }
