좋아요 문구 추가 및 위치 수정

--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -95,7 +95,7 @@
                 type: "POST",
                 success: function(response) {
                     likeButton.html(response.heart_icon);
-                    $(`#count-${postId}`).html(response.like_count);
+                    $(`#count-${postId}`).html('좋아요 '+response.like_count+'개');
                 },
 
                 error: function(response) {
