--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -24,22 +24,15 @@
         <li><a href="{% url 'posts:gallery' %}" id="gallery">Gallery</a></li>
         <li><a href="{% url 'users:mypage' %}">My page</a></li>
         <li><a href="./contact.html">Contact</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'account_logout' %}">Logout</a></li>
+        {% else %}
+            <li><a href="{% url 'account_login' %}">Login</a></li>
+            <li><a href="{% url 'account_signup'%}">Signup</a></li>
+        {% endif %}
     </ul>
 
     <!-- Search Icon -->
     <div class="search-icon" data-toggle="modal" data-target="#searchModal" style="margin-left:20px"><i class="ti-search"></i></div>
-
-
-    <!--django-allauth-->
-    {% if user.is_authenticated %}
-    <div id="btn_group">
-        <button id="A"><a href="{% url 'account_logout' %}" style="color:white">Logout</a></button>
-    </div>
-    {% else %}
-    <div id="btn_group">
-        <button id="A"><a href="{% url 'account_login' %}" style="color:white">Login</a></button>
-        <button id="B"><a href="{% url 'account_signup'%}" style="color:white">Signup</a></button>
-    </div>
-    {% endif %}
 </div>
 <!-- Nav End -->
