팝업창에 상세보기 추가

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -47,7 +47,8 @@
 
 </head>
 
-<body oncontextmenu='return false'>
+<body>
+<!-- <body oncontextmenu='return false'> -->
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
@@ -124,6 +125,7 @@
     <script src="{% static 'js/default-assets/active.js' %}"></script>
 
     <script src="{% static 'js/triggerclick.js' %}"></script>    
+
 
 </body>
 
