--- a/dgufest/templates/personal_data.html
+++ b/dgufest/templates/personal_data.html
@@ -23,8 +23,8 @@
 제공받는 자의 보유.이용기간: 1년
 ※수상자로 선발될 시 통장사본, 신분증사본, 융합교육원 청구 양식에 서명 등 관련 서류를 제출해야 상금 수여가 가능합니다.
 
-2. <동국대학교 총학생회 하이라이트>
-개인정보를 제공받는 자 : 동국대학교 총학생회 하이라이트
+2. <동국대학교 제52대 총학생회 하이라이트>
+개인정보를 제공받는 자 : 동국대학교 제52대 총학생회 하이라이트
 제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 로그인ID, 성별, 생년월일, 이름, 학번
 제공받는 자의 보유.이용기간: 1년
 ※수상자로 선발될 시 학생증 인증 등 신입생 인증 관련 서류를 제출해야 상품 수여가 가능합니다.
