이전/다음 페이지

--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -72,9 +72,27 @@
     </div>
     <div class="row">
         <div class="col-12 text-center wow fadeInUp" data-wow-delay="800ms">
-            <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
+            {% if posts.has_previous %}
+                <a href="?page={{posts.previous_page_number}}" class="btn alime-btn btn-2 mt-15">Previous</a>
+            {% endif %}
+            {% if posts.has_next %}
+                <a href="?page={{posts.next_page_number}}" class="btn alime-btn btn-2 mt-15">View More</a>
+            {% endif %}
+
+                
         </div>
     </div>
+     <!-- {% if posts.has_previous %}
+            <a href="?page=1">맨 앞으로</a>
+            <a href="?page={{posts.previous_page_number}}">이전으로</a>
+        {% endif %}
+            <span>{{post.number}}</span>
+            <span>/</span>
+            <span>{{post.paginator.num_pages}}</span> -->
+        <!-- {% if posts.has_next %}
+            <a href="?page={{posts.next_page_number}}">다음으로</a>
+            <a href="?page={{posts.paginator.num_pages}}">맨 뒤로</a>
+        {% endif %} -->
 </div>
 <!-- Gallery Area End -->
 
