용량제한 수정

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -126,7 +126,10 @@
     <!-- Active -->
     <script src="{% static 'js/default-assets/active.js' %}"></script>
 
-    <script src="{% static 'js/triggerclick.js' %}"></script>    
+    <script src="{% static 'js/triggerclick.js' %}"></script>
+    
+    <script src="{% static 'js/filesizelimit.js' %}"></script>    
+    
 
 
 </body>
