갤러리 폰트 적용

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -21,6 +21,8 @@
 
     <!-- Like -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
+
+    <link rel="stylesheet" href="{% static 'css/style3.css' %}">
     
     <script language="javascript">
         function getCookie( cookieName ) {
@@ -127,7 +129,7 @@
     <script src="{% static 'js/default-assets/active.js' %}"></script>
 
     <script src="{% static 'js/triggerclick.js' %}"></script>
-    
+
     <script src="{% static 'js/filesizelimit.js' %}"></script>    
     
 
