글작성 폼 폰트 색상 블랙으로 변경

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -39,10 +39,10 @@
                     
                         </div>
                             <div class="col-12">
-                                <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required>
+                                <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required style="color:black;">
                             </div>
                             <div class="col-12">
-                                <textarea class="form-control mb-30" name="content" placeholder="내용 입력"></textarea>
+                                <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;"></textarea>
                             </div>
                             <div class="col-12">
                                 <input type="file" name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required>
