이메일인증 디자인 수정

--- a/dgufest/templates/account/password_reset_from_key.html
+++ b/dgufest/templates/account/password_reset_from_key.html
@@ -25,7 +25,7 @@
 <div id="allauth">
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}비밀번호 초기화 링크가 올바르지 않습니다. 다시 <a href="{{ passwd_reset_url }}" style="color: #fc6060; font-weight: bolder;">비밀번호 초기화</a> 하세요.{% endblocktrans %}</p>
+        <p>{% blocktrans %}비밀번호 초기화 링크가 올바르지 않습니다. <br>다시 <a href="{{ passwd_reset_url }}" style="color: #fc6060; font-weight: bolder;">비밀번호 초기화</a> 하세요.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
